--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-Flask==2.0.1
-Flask-SocketIO==5.1.1
-eventlet==0.33.3
+Flask==3.0.0
+Flask-SocketIO==5.3.6
+python-socketio==5.10.0
+python-engineio==4.8.0
+simple-websocket==1.0.0
+Werkzeug==3.0.1
+bidict==0.22.1
+dnspython==2.4.2
+six==1.16.0
